| Summary: | ASTERISK-22248: [patch] test_sip_rtpqos corrupts dialogs container | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2013-08-03 16:47:07 | Date Closed: | 2013-08-20 11:20:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | SVN 1.8.24.0 11.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace-test_sip_rtpqos.txt ( 1) test_sip_rtpqos.patch | |
| Description: | test_sip_rtpqos unref's the dialog when it should be unlinked. This free's the dialog while leaving it listed in the container. In my tests this causes a segfault when unload_module() tries to free the dialog again. | ||
| Comments: | By: Mark Michelson (mmichelson) 2013-08-20 10:47:23.742-0500 It appears that both the unlink and the unref are required. The unlink will remove the dialog from the container, but without the additional unref, the dialog itself will be leaked. I'll go ahead and make the necessary change and get the fix committed. | ||